[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi3"
version = "1.0.0"
description = "Pi3 model for 3D scene understanding and point cloud generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pi3 Authors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pillow",
    "opencv-python",
    "plyfile",
    "huggingface_hub",
    "safetensors",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
visualization = [
    "viser",
    "tyro",
]

[project.urls]
Homepage = "https://github.com/your-username/Pi3"
Repository = "https://github.com/your-username/Pi3"
Issues = "https://github.com/your-username/Pi3/issues"

[tool.setuptools.packages.find]
include = ["pi3*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3